# Todo-app-project

ned ptoject/todo_app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ned ptoject/todo_app/todo_app/: database.py  main.py  models.py  streamlit_app.py  todos.db
